refactored BifidCipher